# cli

./: .gitignore  .prettierrc  Cargo.toml  Cross.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
npm/: install.cjs  package.json  run.cjs
pkg/: bin.js  install.js  package.json  run.js  voulr
src/: main.rs  utils.rs
src/create/: mod.rs  scaffold.rs
src/init/: mod.rs
src/input/: mod.rs
src/prompt/: framework.rs  language.rs  location.rs  mod.rs
templates/axum/src/: main.rs
templates/rust/axum/: Cargo.toml
templates/rust/axum/src/: main.rs
