[package]
name = "voulr"
version = "0.3.8"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
inquire = "0.7.5"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 's' # optimize for size
lto = true
strip = true
